No idea when and how this worked, but made it work in jQuery 1.9.1/Bootstrap 3.3.5

--- a/django_bootstrap_dynamic_formsets/templates/django_bootstrap_dynamic_formsets/dynamic_formsets_js.html
+++ b/django_bootstrap_dynamic_formsets/templates/django_bootstrap_dynamic_formsets/dynamic_formsets_js.html
@@ -42,7 +42,7 @@
         $("[id$=DELETE]").parents(".form-group").hide();
 
         //Holds an empty form
-        var $emptyForm = $($('#empty-form').remove().html());
+        var $emptyForm = $('#empty-form').remove();
 
         var $sortItem = $('.sort-item');
 
