Fix issue #7 on source repo

--- a/django_bootstrap_dynamic_formsets/templates/django_bootstrap_dynamic_formsets/dynamic_formsets_js.html
+++ b/django_bootstrap_dynamic_formsets/templates/django_bootstrap_dynamic_formsets/dynamic_formsets_js.html
@@ -77,7 +77,7 @@
         var i = 0;
         $sortItem.each(function () {
             if (i < numInitialForms) {
-                $(this).addClass("initial-form");
+                $(this).addClass("{% if formset.prefix %}{{formset.prefix}}-{% endif %}initial-form");
                 i++;
             } else {
                 return false;
