Call hideDeleteButtonOnLastItem on the document load

--- a/django_bootstrap_dynamic_formsets/templates/django_bootstrap_dynamic_formsets/dynamic_formsets_js.html
+++ b/django_bootstrap_dynamic_formsets/templates/django_bootstrap_dynamic_formsets/dynamic_formsets_js.html
@@ -35,7 +35,9 @@
                 $deleteButton.hide();
             else
                 $deleteButton.show();
-        }
+        };
+        // Check this on the load
+        hideDeleteButtonOnLastItem();
 
         //Writes the correct current order in the order form fields
         var correctOrder = function () {
